# fab-scad

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  PLAN.md  PLAN_ARCHIVE.md  Packager.toml  README.md  SPEC.md  SPEC_manifold-rs.md  SPEC_manifold-rs_R1.md  SPEC_workflow.md  printers.toml
.cargo/: config.toml  mutants.toml
.config/: nextest.toml
.githooks/: pre-push
docs/: auto-pipeline.md  blowup_bench.sh  deploy-spike-notes.md  eval-cache-design.md  geometry-service.md  heap-bounded-eval.md  jit-recipe.md  jit-rung-d.md  m3-explicit-eval-spec.md  manifold-kernel-spike.md  manifold-thread-safety.md  minkowski-design.md  mod-cache-rung2b-design.md  models-profile.md  openscad-libraries.md  packaging.md  parser-spine.md  perf-tier-spec.md  publish.md  slicing-blowup.md  slicing-gui.md  sustainment.md  svg-import-design.md  tbb-backend-spike.md  testing-cards.md  web-bundle.md  web-embed.md  web-projects-design.md  web-save-back.md  workflow-tabs-mockup.html
fuzz/: Cargo.toml
fuzz/fuzz_targets/: geo_lower.rs
geom/: Cargo.toml
geom/src/: lib.rs
gui/: CLAUDE.md  Cargo.toml  build.rs
gui/assets/fonts/: .subset-stamp  LICENSE.md
gui/examples/: listview_spike.rs
gui/src/: clipboard.rs  config.rs  console.rs  cover.rs  customize.rs  cuts.rs  editor_brackets.rs  editor_indent.rs  fab.rs  file_ops.rs  geom.rs  geom_stub.rs  geom_wasm.rs  harness_tests.rs  highlight.rs  jobs.rs  lib.rs  lib_fetch.rs  main.rs  panel.rs  print.rs  project.rs  publish_dialog.rs  publish_native.rs  publish_web.rs  render_quality.rs  save_target.rs  scene.rs  screenshot.rs  script.rs  settings.rs  state.rs  stl.rs  theme.rs  view.rs  web_host.rs  web_name.rs  worker_rpc.rs
gui/web/: .gitignore  build-wasm.sh  index.html
jit/: Cargo.toml
jit/src/: lib.rs
jit/tests/: bench_percall.rs  corpus_diff.rs  dollar_globals.rs  fast_eq_jit.rs  named_args.rs  registry.rs  tier_ladder.rs
lang/: Cargo.toml  clippy.toml
lang/docs/: grammar-inventory.md
lang/examples/: seed_fuzz_from_bosl2.rs
lang/fuzz/: .gitignore  Cargo.toml  TROPHIES.md
lang/fuzz/corpus/lex/: dollar_and_split  err_unterminated_block  err_unterminated_use  float_leading_dot  float_trailing_dot_exp  hex_upper_is_id  include_path  keyword_whole_lexeme  line_comment_annotation  op_le_lt  ops_run  real_module  str_bad_escape  str_hex_escape  str_unicode_escape  str_utf8_raw  use_as_ident  use_path
lang/fuzz/corpus/parse/: assignment  block  comprehension_all  comprehension_nested_paren  customizer_comments  deep_left_chain  err_deferred_module_def  err_list_comprehension  err_missing_paren  expr_prefix_forms  function_def  if_child_position  if_else_chain  keyword_module_id  modifiers  module_child  module_def  nested_children  postfix_chain  power_right_assoc  precedence  range3  real_sphere  ternary  use_include  vector
lang/fuzz/fuzz_targets/: eval.rs  gen_diff.rs  jit_diff.rs  lex.rs  parse.rs
lang/src/: customizer.rs  error.rs  geom.rs  lib.rs  mesh.rs  webcolors.rs
lang/src/eval/: builtins.rs  config.rs  dxfdim.rs  eval_cache.rs  fmt.rs  fnprofile.rs  fragments.rs  geo.rs  geo2d.rs  geo_drop.rs  geo_stack.rs  geometry.rs  intrinsics.rs  io.rs  jit_abi.rs  json.rs  loader.rs  message.rs  metrics.rs  mod.rs  mod_cache.rs  mod_redundancy.rs  module.rs  object.rs  ops.rs  read_set.rs  redundancy.rs  rng.rs  scope.rs  text.rs  trace.rs  trig.rs  value.rs
lang/src/eval/intrinsics/: affine.rs  fingerprint.rs  geometry.rs  lists.rs  math.rs  mod.rs  poc.rs  regions.rs  shape.rs  tests.rs  vectors.rs
lang/src/lexer/: chars.rs  comment.rs  mod.rs  number.rs  string.rs  token.rs  word.rs
lang/src/parser/: ast.rs  diag.rs  expr.rs  mod.rs  print.rs  spine.rs  stmt.rs
lang/tests/: bosl2_scout.rs  conformance.rs  deep_drop.rs  error_span.rs  eval_corpus.rs  geometry_corpus.rs  geometry_tree.rs  geometry_tree_2d.rs  lexer_corpus.rs  loader_corpus.rs  m3_driver.rs  module_corpus.rs  module_recursion_bound.rs  parser_corpus.rs  print_roundtrip.rs  resolve_needs.rs  tracing_bench.rs
lang/tests/semantics/: fragment.rs  main.rs  tessellation.rs  trig.rs
manifold/: Cargo.toml  build.rs  clippy.toml
manifold/examples/: boolean_perf.rs
manifold/fuzz/: Cargo.toml  README.md
manifold/fuzz/fuzz_targets/: csg_tree.rs  polygon.rs
manifold/goldens/: README.md  oracle_goldens.json
manifold/proptest-regressions/: oracle.txt
manifold/src/: boolean.rs  bridge.rs  check.rs  cross_section.rs  golden.rs  lib.rs  linalg.rs  mathf.rs  mesh.rs  mesh_ids.rs  minkowski.rs  offset.rs  oracle.rs  par.rs  polygon.rs  probe.rs  quickhull.rs  sort.rs  status.rs
manifold/src/boolean/: boolean3.rs  boolean_result.rs  collider.rs  disjoint_sets.rs  edge_op.rs  face_op.rs  polygon.rs  predicates.rs  vocab.rs
manifold/tests/: ingest_robustness.rs  m5_0_i_overlay_spike.rs  m5_4_cross_section_test.rs  m6_native_wasm_golden.rs  m7_golden_mode.rs  par_speedup.rs  set_properties_regression.rs
memory/: bevy-change-detection-merge.md
perf/: baseline.json  bosl2-examples.json
scad-lib/: README.md  connectors.scad  coupon.scad  family_logo.scad  part_number.scad  slicer.scad  version_stamp.scad
scripts/: manifold-wasm-par-check.sh  profile-analyze.py  profile-model.sh
spikes/wasm-gui/: Cargo.toml
spikes/wasm-gui/src/: lib.rs
spikes/wasm-gui/web/: index.html
spikes/wasm-kernel/: Cargo.toml
spikes/wasm-kernel/.cargo/: config.toml
spikes/wasm-kernel/src/: lib.rs
src/: auto.rs  auto_orient.rs  auto_slice.rs  backend.rs  bambu.rs  corpus.rs  credentials.rs  cross_section.rs  decimate.rs  deps.rs  differ.rs  feasibility.rs  gendiff.rs  geo_hash.rs  geo_redundancy.rs  geom.rs  geomsg.rs  geomsvc.rs  import.rs  kernel.rs  lib.rs  main.rs  manifest.rs  num.rs  openscad.rs  oracle.rs  pack.rs  printers.rs  project.rs  publish.rs  publish_contract.rs  scadproj.rs  slicing.rs  smoke.rs  stl.rs  surface.rs  svg.rs  sweep_expect.rs  threemf_in.rs  threemf_out.rs
types/: Cargo.toml
types/src/: lib.rs
web/: Cargo.toml
web/assets/: demo.stl
web/src/: geom_worker.rs  lib.rs  main.rs  scad_worker.rs  stl.rs  worker_rpc.rs
(+48 files in other folders)
