[package]
name = "fab-scad"
version = "0.1.0"
edition = "2024"
description = "Workflow layer around OpenSCAD: render, slice, output, publish"
license = "GPL-2.0-or-later"
repository = "https://github.com/chotchki/fab-scad"
# crates.io ships ONLY the tool (18.9) — without this the .crate drags models/, docs/, spikes/
# and blows past the registry's 10 MiB cap (naive package: 26.5 MiB compressed).
include = ["src/**", "LICENSE", "README.md"]

[lib]
name = "fab_scad"
path = "src/lib.rs"

[[bin]]
name = "fab"
path = "src/main.rs"
required-features = ["native"]

# The BOSL2 corpus isolation worker (K.1): runs ONE test script (stdin) so a stack-overflow abort takes down
# only this process, not the parent sweep. Not a user-facing tool — the corpus harness spawns it.
[[bin]]
name = "corpus_worker"
path = "src/bin/corpus_worker.rs"
required-features = ["native"]

# Single-test repro for the L.2 burn-down: runs ONE named BOSL2 test and prints its bucket, FULL error, and
# console (echo/warning) output — with an optional `--trace` for the evaluator's `set -x`. The debug
# counterpart to the sweep's one-line-per-test roster. A dev tool, not user-facing.
[[bin]]
name = "corpus_repro"
path = "src/bin/corpus_repro.rs"
required-features = ["native"]

# The models-harness isolation worker (L.3): evaluates ONE model file (include graph + `import()` meshes) and
# prints its outcome, so the harness can KILL a runaway — the interpreter is slow enough on heavy BOSL2
# geometry that ~half the real models blow a 10 s budget — instead of leaking a host thread per timeout.
[[bin]]
name = "models_worker"
path = "src/bin/models_worker.rs"
required-features = ["native"]

# One-file differential repro (L.3 divergence hunt): runs ONE .scad through scad-rs + the oracle and prints
# the mesh verdict (AGREE / genus X vs Y / residual). The reduce-and-diagnose tool for a flagged DIVERGE.
[[bin]]
name = "diff_repro"
path = "src/bin/diff_repro.rs"
required-features = ["native"]

# Echo dump (L.3.4): prints a .scad's echo/warning output through scad-rs — the VALUE-level counterpart to
# diff_repro, for bisecting a construction (e.g. why a VNF comes out empty) against OpenSCAD's echo.
[[bin]]
name = "echo_repro"
path = "src/bin/echo_repro.rs"
required-features = ["native"]

[workspace]
members = ["gen", "geom", "gui", "jit", "lang", "web"]

[features]
# The in-process Manifold geometry kernel (Track C). Default-on so the normal build + tests
# exercise it, but gated so a kernel-less build doesn't need a C++ toolchain (cmake/clang).
default = ["kernel", "native"]
# `geometry` (fab-lang) too: the kernel now speaks the shared geom vocabulary (Vec3/Tri/Affine), so
# Solid's mesh + transform APIs are typed. fab-lang is pure Rust — cheap to pull in alongside Manifold.
kernel = ["geometry", "mesh-io", "dep:manifold3d", "dep:threemf", "dep:quick-xml", "dep:usvg"]
# The Bambu `.3mf` WRITER (`bambu`): an OPC zip of hand-written XML + indexed meshes — mesh-only, no
# Solid, no C++ kernel. Split out of `kernel` (W.3.4) so the wasm fab-gui app can co-pack + export
# in-process without the Manifold toolchain, while the miri-lean `geometry` build stays zip-free.
mesh-io = ["geometry", "dep:zip"]
# Everything that needs an OS (18.3): the OpenSCAD spawn, publish (blocking reqwest), project
# scaffolding, the smoke sweep, and the CLI-only deps. `--no-default-features` is the wasm32-safe
# core — pure geometry/slicing/spec logic, no process spawn, no network.
# fab-lang (the scad-rs evaluator) ALONE — the geometry backend + its miri interface test need `Mesh`
# without the OS-heavy native deps (reqwest/clap/rayon choke miri). `native` implies it.
geometry = ["dep:fab-lang"]
# The desktop Cranelift JIT (P.1) — pulls fab-jit (cranelift) alongside the evaluator. Its OWN feature (not
# folded into `geometry`) so the lean/miri geometry build never compiles cranelift; `native` implies it.
jit = ["geometry", "dep:fab-jit"]
native = ["dep:reqwest", "dep:clap", "dep:rayon", "jit", "geometry"]

[dependencies]
# scad-rs, our OpenSCAD reimplementation — the differential harness's OTHER engine (G.3.7). Pure
# Rust + wasm-clean, but only the native differ uses it for now, so gate it behind `native`.
fab-lang = { path = "lang", optional = true }
# The desktop numeric JIT (P.1) — native-only (cranelift can't JIT in-wasm), so gated behind `jit`/`native`.
fab-jit = { path = "jit", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
# Structured logging facade (both targets, wasm-safe). Kernel geometry ops log diagnostics at DEBUG and
# shout at WARN on a non-manifold result — near-zero without a subscriber; fab-lang already uses it.
tracing = "0.1"
rayon = { version = "1", optional = true }
threemf = { version = "0.8.0", optional = true }
# threemf's serde can't round-trip <m:basematerials> (namespace-prefix renames) — threemf_in
# pull-parses the materials table itself, prefix-agnostic.
quick-xml = { version = "0.39", optional = true }
# SVG (2D vector) import (Q.4). usvg NORMALIZES an SVG document — resolves viewBox/units/transforms, expands
# shapes (rect/circle/ellipse/line/polyline/polygon) + use/defs/styles into a flat tree of Bézier paths — so
# the reader only owns flattening + the OpenSCAD scale/Y-flip affine. default-features=false drops the `text`
# feature (fontdb + system-font lookup = non-deterministic, banned by doctrine #36); SVG <text> then imports
# EMPTY, which is exactly what OpenSCAD's own SVG importer does with text.
usvg = { version = "0.45", optional = true, default-features = false }
# The geomsvc wire codec (worker postMessage envelope). Wire types are bincode-safe by
# construction — no untagged enums (Num stays OUT of the wire).
bincode = "1"
# Stored (no compression) only — default features pull bzip2/zstd backends we don't need.
zip = { version = "8", optional = true, default-features = false }
# Publish client (fab publish → hotchkiss.io). Blocking (the CLI/GUI aren't async here); rustls so
# we don't drag in system OpenSSL. multipart for media upload, json for the upload response.
reqwest = { version = "0.12", default-features = false, optional = true, features = [
    "blocking",
    "multipart",
    "json",
    "rustls-tls",
] }

# The models harness (L.3) subscribes to fab-lang's TRACE-level eval spans to PROFILE per builtin/module
# (the intrinsic worklist L.4 cuts the JIT phase from) — the subscriber side, test-only, so the shipped
# lib stays subscriber-agnostic + wasm never sees it. `registry` gives the span store the layer times.
[dev-dependencies]
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "std"] }

# The kernel per target (18.4): native gets the default `parallel` (TBB); wasm32 swaps to the
# provisional `unstable-wasm-uu` backend (C++ via wasm-cxx-shim, single-threaded, no exceptions).
# Same crate, same API — kernel.rs doesn't know which it got.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
manifold3d = { version = "0.3.1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
manifold3d = { version = "0.3.1", optional = true, default-features = false, features = [
    "unstable-wasm-uu",
] }
