[package]
name = "fab-geom"
version = "0.1.0"
edition = "2024"
description = "The geometry worker's wasm: fab-scad's geomsvc behind one byte-envelope export"
license = "GPL-2.0-or-later"

# cdylib = the worker's wasm; rlib keeps `cargo test -p fab-geom` possible natively.
[lib]
crate-type = ["cdylib", "rlib"]

# W.6: `par` builds the worker's wasm with fab-manifold's rayon-over-wasm-bindgen-rayon pool (threaded
# boolean kernel). build-wasm.sh passes it with nightly `-Z build-std` + atomics; native
# `cargo test -p fab-geom` never needs it (native fab-manifold is `par` unconditionally).
[features]
par = ["fab-scad/kernel-par"]

[dependencies]
fab-scad = { path = "..", default-features = false, features = ["kernel"] }
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
