[package]
name = "fab-geom"
version = "0.1.0"
edition = "2024"
description = "The geometry worker's wasm: fab-scad's geomsvc behind one byte-envelope export"
license = "GPL-2.0-or-later"

# cdylib = the worker's wasm; rlib keeps `cargo test -p fab-geom` possible natively.
[lib]
crate-type = ["cdylib", "rlib"]

# W.6: `par` builds the worker's wasm with fab-manifold's rayon-over-wasm-bindgen-rayon pool (threaded
# boolean kernel). build-wasm.sh passes it with nightly `-Z build-std` + atomics; native
# `cargo test -p fab-geom` never needs it (native fab-manifold is `par` unconditionally).
[features]
par = ["fab-scad/kernel-par"]
# W.3.17: the browser perf head-to-head's fab leg. Adds a JS-callable `render_scad_stl(main, libs_json)`
# export (a bench harness can drive one whole render without hand-rolling the bincode envelope). OFF in
# the shipped worker — keeps serde_json + the extra export out of the release wasm.
bench = ["dep:serde_json"]

[dependencies]
fab-scad = { path = "..", default-features = false, features = ["kernel"] }
wasm-bindgen = "0.2"
serde_json = { version = "1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
# W.3.16: the worker captures its own `tracing` (a minimal Subscriber) and ships it back in the reply
# envelope so it reaches the app's "Full" console — the wasm Worker is a separate context the
# main-thread subscriber can't see. wasm-only (native worker tracing rides the app's shared subscriber).
tracing = { version = "0.1", default-features = false, features = ["std"] }
