[package]
name = "fab-gui"
version = "0.1.0"
edition = "2024"
description = "Bevy GUI for fab-scad: set cut planes, place connectors, preview piece-vs-bed"
license = "GPL-2.0-or-later"

[dependencies]
fab-scad = { path = ".." }
# Direct dep for the shared geometry types (Vec3/Dims) the auto-slice + planner APIs take — already a
# transitive dep via fab-scad's geometry feature, named here so the GUI can construct them.
fab-lang = { path = "../lang" }
anyhow = "1"
bevy = { version = "0.19", features = ["bevy_picking", "mesh_picking"] }
# Native Open dialog for the file/directory picker (5.3.1). Async variant integrates with Bevy's
# task pool; on macOS it dispatches the panel to the main thread internally.
rfd = "0.17"
bevy_egui = "0.41"
# Format-preserving project.toml writes (U.3.14 Phase C autosave): only the [slicing] table is
# rebuilt, [project]/[[part]]/comments stay byte-for-byte. `serde` feature = serialize Slicing directly.
toml_edit = { version = "0.22", features = ["serde"] }
