[package]
name = "fab-gui"
version = "0.1.0"
edition = "2024"
description = "Bevy GUI for fab-scad: set cut planes, place connectors, preview piece-vs-bed"
license = "GPL-2.0-or-later"

# cdylib = the wasm module (W.3); rlib so the native bin (src/main.rs) links the same app.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Shared geometry types (Vec3/Dims) the auto-slice + planner APIs take — pure Rust, both targets.
fab-lang = { path = "../lang" }
anyhow = "1"
# Diet mirrors web/ (proven on wasm + native): 3d render + ui + picking + gizmos + winit + webgl2,
# no sprite/audio. egui replaces feathers, so bevy_feathers/bevy_ui_widgets are dropped.
bevy = { version = "0.19", default-features = false, features = [
    "default_app",
    "std",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "webgl2",
    "x11",
    "3d_bevy_render",
    "scene",
    "picking",
    "ui_api",
    "ui_bevy_render",
    "bevy_gizmos",
    "bevy_gizmos_render",
    "bevy_picking",
    "mesh_picking",
] }
# File open: native dialog on desktop, <input type=file> on wasm (rfd covers both).
rfd = "0.17"
bevy_egui = "0.41"

# --- native only ---
# The in-process kernel + native geometry (openscad/publish/reqwest/rayon/JIT) and the
# format-preserving project.toml autosave (toml_edit). On wasm the kernel lives in the geom
# worker (W.3.4) and there's no filesystem, so neither is linked.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
toml_edit = { version = "0.22", features = ["serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.fab-scad]
path = ".."
features = ["kernel", "native"]

# --- wasm only ---
# Kernel-FREE base: geometry runs in the fab-geom worker (W.3.4); this crate links the wire
# types + pure helpers. Plus the browser host surface (canvas / config / file / download).
[target.'cfg(target_arch = "wasm32")'.dependencies]
fab-scad = { path = "..", default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Location",
    "Document",
    "Element",
    "Blob",
    "Url",
    "HtmlAnchorElement",
    "Response",
    "Storage",
    "Worker",
    "WorkerOptions",
    "WorkerType",
    "MessageEvent",
] }
