[package]
name = "fab-gui"
version = "1.0.3"
edition = "2024"
description = "Bevy GUI for fab-scad: set cut planes, place connectors, preview piece-vs-bed"
license = "GPL-2.0-or-later"

# cdylib = the wasm module (W.3); rlib so the native bin (src/main.rs) links the same app.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Shared geometry types (Vec3/Dims) the auto-slice + planner APIs take — pure Rust, both targets.
fab-lang = { path = "../lang" }
anyhow = "1"
# The `fab:config` block codec (W.3.8) serialises the per-part slicing config to JSON in a .scad comment —
# BOTH targets (web bakes it into the downloaded .scad; desktop writes the same block, retiring toml_edit).
# `serde` derive is for the GUI-side v2 wrapper (printer + parts); the part types come pre-derived from fab_scad.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Diet mirrors web/ (proven on wasm + native): 3d render + ui + picking + gizmos + winit + webgl2,
# no sprite/audio. egui replaces feathers, so bevy_feathers/bevy_ui_widgets are dropped.
bevy = { version = "0.19", default-features = false, features = [
    "default_app",
    "std",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "webgl2",
    "x11",
    "3d_bevy_render",
    "scene",
    "picking",
    "ui_api",
    "ui_bevy_render",
    "bevy_gizmos",
    "bevy_gizmos_render",
    "bevy_picking",
    "mesh_picking",
] }
# File open: native dialog on desktop, <input type=file> on wasm (rfd covers both).
rfd = "0.17"
bevy_egui = "0.41"

# --- native only ---
# The in-process kernel + native geometry (openscad/publish/reqwest/rayon/JIT). On wasm the kernel
# lives in the geom worker (W.3.4) so it isn't linked. (Slicing config no longer autosaves to
# project.toml — it rides a `fab:config` block in the .scad buffer now, W.3.8, so toml_edit is gone.)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# The native geometry-service transport's request/reply channels (W.3.3).
async-channel = "2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.fab-scad]
path = ".."
features = ["kernel", "native"]

# --- wasm only ---
# Kernel-FREE base: geometry runs in the fab-geom worker (W.3.4); this crate links the wire
# types + pure helpers. Plus the browser host surface (canvas / config / file / download).
[target.'cfg(target_arch = "wasm32")'.dependencies]
# geometry (pure Rust: shared types + auto_orient + the backend trait) + mesh-io (the bambu .3mf
# co-pack/export writer + feasibility) — wasm-safe, no kernel/C++. The kernel lives in the geom worker (W.3.6).
fab-scad = { path = "..", default-features = false, features = ["geometry", "mesh-io"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
js-sys = "0.3"
# Bridge the async clipboard read (W.3.29.7 editor paste) back to a Bevy system; Send+Sync ends = Resource-safe.
async-channel = "2"
# Encode the offscreen cover render target to PNG bytes for the web publish (W.3.29.3) — the byte twin of
# the desktop screenshot's fs save. Pinned to Bevy's `image` version so `Image::try_into_dynamic` lines up.
image = { version = "0.25", default-features = false, features = ["png"] }
web-sys = { version = "0.3", features = [
    "Window",
    "Location",
    "Document",
    "Element",
    "Blob",
    # Blob download (W.3.13): typed Blob options + the object-URL anchor click.
    "BlobPropertyBag",
    "Url",
    # `?model=` scad-in (W.3.12): parse the page URL's query string.
    "UrlSearchParams",
    "HtmlAnchorElement",
    "Response",
    # Z.3.9: read `Content-Disposition` off the `?model=` response — the model's human name.
    "Headers",
    # Z.3.10: the browser file picker behind the Project tab's "Add…" — the wasm twin of rfd's
    # multi-pick. `File` extends `Blob`, so its bytes come from the `Blob` feature already above.
    "HtmlInputElement",
    "File",
    "FileList",
    # Save-back upload (W.5.8): multipart POST of the three variants, same-origin cookie.
    "FormData",
    "RequestInit",
    "RequestCredentials",
    "Storage",
    "Worker",
    "WorkerOptions",
    "WorkerType",
    "MessageEvent",
    "Event",
    # `fab-gui:ready` splash-removal signal (W.3.7): a CustomEvent dispatched on the document.
    "CustomEvent",
    "EventTarget",
    # Editor paste (W.3.29.7): read the system clipboard on Cmd/Ctrl+V — bevy_egui's own paste event
    # never fires on desktop web (its text-agent input is focused only on mobile).
    "Navigator",
    "Clipboard",
    # Modifier unstick (W.3.29.8): read metaKey/ctrlKey/etc off key events — ground truth even when a
    # keyup is dropped (macOS Cmd-keyup swallow), which bevy_egui's event tracking can't recover from.
    "KeyboardEvent",
] }
